--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-import": "^1.12.0",
     "less": "^3.8.1",
     "less-loader": "^5.0.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
