--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "js-cookie": "^2.2.1",
     "vant": "^2.0.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.5"
+    "vue-router": "^3.0.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
