--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "inobounce": "^0.2.0",
     "mobile-device-detect": "^0.2.3",
+    "node-sass": "^4.12.0",
     "vant": "^2.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.5",
