--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "clipboard": "^2.0.4",
     "inobounce": "^0.2.0",
     "mobile-device-detect": "^0.2.3",
     "node-sass": "^4.12.0",
