--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^3.8.1",
     "less-loader": "^5.0.0",
     "sass-loader": "^7.1.0",
+    "vue-svg-icon": "^1.2.9",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
