修改分享路径

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 ENV="production"
 
 VUE_APP_BASE_API="http://m.5gyungou.com/api/"
-VUE_APP_SHARE="http://m.5gyungou.com/#/goods/"
+VUE_APP_SHARE="http://m.5gyungou.com/goods/"
